try to fix error

--- a/content/publication/long-essay-good-essay/cite.bib
+++ b/content/publication/long-essay-good-essay/cite.bib
@@ -6,5 +6,5 @@
 	year={2020},      
 	url={https://www.frontiersin.org/articles/10.3389/fpsyg.2020.562462},       
 	doi={10.3389/fpsyg.2020.562462},      
-	issn={1664-1078},   
+	issn={1664-1078} 
 }
