--- a/content/publication/schreibkomp-eng-oberstufe/cite.bib
+++ b/content/publication/schreibkomp-eng-oberstufe/cite.bib
@@ -4,6 +4,6 @@
 	journal={Zeitschrift für Erziehungswissenschaft},      
 	volume={22},           
 	year={2019},      
-	url={https://www.frontiersin.org/articles/10.3389/fpsyg.2020.562462},       
+	url={https://link.springer.com/article/10.1007/s11618-019-00910-3},       
 	doi={10.1007/s11618-019-00910-3}  
 }
